{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 41,
  "lineage": "33aca781-6221-79e0-7270-26a195c9fe50",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004ab35f5ad175551",
            "arn": "arn:aws:ec2:us-west-2:803238624325:elastic-ip/eipalloc-004ab35f5ad175551",
            "domain": "vpc",
            "id": "eipalloc-004ab35f5ad175551",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-81-204-114.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.204.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078924d12f2ad6acf",
            "arn": "arn:aws:ec2:us-west-2:803238624325:elastic-ip/eipalloc-078924d12f2ad6acf",
            "domain": "vpc",
            "id": "eipalloc-078924d12f2ad6acf",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-167-138-207.us-west-2.compute.amazonaws.com",
            "public_ip": "35.167.138.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0432a55860b5a66f8",
            "arn": "arn:aws:ec2:us-west-2:803238624325:elastic-ip/eipalloc-0432a55860b5a66f8",
            "domain": "vpc",
            "id": "eipalloc-0432a55860b5a66f8",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-224-7-172.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.7.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip-3"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:internet-gateway/igw-0a139966ffd4376b1",
            "id": "igw-0a139966ffd4376b1",
            "owner_id": "803238624325",
            "tags": {
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004ab35f5ad175551",
            "association_id": "eipassoc-09d61e08b26bce0de",
            "connectivity_type": "public",
            "id": "nat-04950862f29d62abf",
            "network_interface_id": "eni-0d1e1b120f004337a",
            "private_ip": "10.0.1.48",
            "public_ip": "35.81.204.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08af365ac51e9c2fc",
            "tags": {
              "Name": "lesson-5-vpc-nat-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078924d12f2ad6acf",
            "association_id": "eipassoc-05b970e68df709a9a",
            "connectivity_type": "public",
            "id": "nat-024dc7a18d7e43946",
            "network_interface_id": "eni-02fb3c0a1134b206d",
            "private_ip": "10.0.2.44",
            "public_ip": "35.167.138.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f215c24e2f43668f",
            "tags": {
              "Name": "lesson-5-vpc-nat-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0432a55860b5a66f8",
            "association_id": "eipassoc-05a8a701359097d5d",
            "connectivity_type": "public",
            "id": "nat-0b02e2e5d92c7d78c",
            "network_interface_id": "eni-02e88873aef256805",
            "private_ip": "10.0.3.173",
            "public_ip": "44.224.7.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f7d8fca5e46d2509",
            "tags": {
              "Name": "lesson-5-vpc-nat-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:route-table/rtb-0dbde3f9cebd5313b",
            "id": "rtb-0dbde3f9cebd5313b",
            "owner_id": "803238624325",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04950862f29d62abf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:route-table/rtb-0e8cbd3255f685d90",
            "id": "rtb-0e8cbd3255f685d90",
            "owner_id": "803238624325",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-024dc7a18d7e43946",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:route-table/rtb-0f10342f76dc45917",
            "id": "rtb-0f10342f76dc45917",
            "owner_id": "803238624325",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b02e2e5d92c7d78c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:route-table/rtb-06994c746e8a55966",
            "id": "rtb-06994c746e8a55966",
            "owner_id": "803238624325",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a139966ffd4376b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0953e7154b29a108e",
            "route_table_id": "rtb-0dbde3f9cebd5313b",
            "subnet_id": "subnet-090486b482bb3c3ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6f5c53e31d89e91",
            "route_table_id": "rtb-0e8cbd3255f685d90",
            "subnet_id": "subnet-05f4b5712569459ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1d99bcde5a9f2cf",
            "route_table_id": "rtb-0f10342f76dc45917",
            "subnet_id": "subnet-03df2d26325679599"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e249f5bc36e8fcf1",
            "route_table_id": "rtb-06994c746e8a55966",
            "subnet_id": "subnet-08af365ac51e9c2fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac8f501df942c45c",
            "route_table_id": "rtb-06994c746e8a55966",
            "subnet_id": "subnet-0f215c24e2f43668f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066f109309eb5d671",
            "route_table_id": "rtb-06994c746e8a55966",
            "subnet_id": "subnet-0f7d8fca5e46d2509"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:subnet/subnet-090486b482bb3c3ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090486b482bb3c3ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803238624325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:subnet/subnet-05f4b5712569459ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f4b5712569459ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803238624325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:subnet/subnet-03df2d26325679599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03df2d26325679599",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803238624325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:subnet/subnet-08af365ac51e9c2fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08af365ac51e9c2fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "803238624325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:subnet/subnet-0f215c24e2f43668f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f215c24e2f43668f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "803238624325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:subnet/subnet-0f7d8fca5e46d2509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7d8fca5e46d2509",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "803238624325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-subnet-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-subnet-3"
            },
            "vpc_id": "vpc-0d26a54254f1064b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:803238624325:vpc/vpc-0d26a54254f1064b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028c325f34116dd2c",
            "default_route_table_id": "rtb-01d46ce38ed2736cd",
            "default_security_group_id": "sg-00a57f49d48b53ccb",
            "dhcp_options_id": "dopt-07eb9b29a30e9a56c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d26a54254f1064b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d46ce38ed2736cd",
            "owner_id": "803238624325",
            "tags": {
              "Name": "lesson-5-vpc"
            },
            "tags_all": {
              "Name": "lesson-5-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}